@@ -1,0 +1,43 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  num_layers = 3,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+destination{
+  name = "destination_1",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+  default = true,
+}
+
+sensor{
+  name = "my_sensor",
+  layer = 0,
+  x = 24,
+  y = 61,
+  width = 16,
+  height = 16,
+}
+
+destination{
+  layer = 0,
+  x = 56,
+  y = 29,
+  direction = 1,
+}
+
