@@ -35,6 +35,7 @@ Changes that do not introduce incompatibilities:
 * Add a function sol.main.get_quest_format().
 * Add a function sol.main.get_type() (#744).
 * Add a method map:get_num_layers() (#445).
+* Add a method map:get_entities_by_type() (#796).
 * Add a method map:get_entities_in_rectangle() (#142).
 * map:get_entities() can now be called without parameter to get all entities.
 * map:get_entities*() functions now give entities sorted in Z order (#779).
